hard-gists/3750993/run.log
=== Docker Run Log for 3750993 ===
Started at: Mi 29. Okt 13:59:08 CET 2025

[2025-10-29 13:59:08] START: Running container for 3750993
[2025-10-29 13:59:09] SUCCESS: Container e8d06513aca626179be386df077bae4ba0a3bf4147dfb15c017438c32a9e1e3d started for 3750993
=== Container logs for 3750993 ===
  File "/snippet.py", line 97
    except (IOError, ValueError), e:
           ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 3750993 ===
[2025-10-29 13:59:11] INFO: Container e8d06513aca626179be386df077bae4ba0a3bf4147dfb15c017438c32a9e1e3d has stopped
